[gd_scene load_steps=6 format=3 uid="uid://vtk1f7ay8agw"]

[ext_resource type="FontFile" uid="uid://cq6y8rhxtac33" path="res://Assets/dogicapixel.ttf" id="1_qaysh"]
[ext_resource type="PackedScene" uid="uid://b0uvi1e534jup" path="res://Objects/UI/PartyMemberStatblock.tscn" id="2_odos0"]
[ext_resource type="Script" path="res://Objects/UI/Scripts/MainMenu.gd" id="2_uakbt"]

[sub_resource type="Theme" id="Theme_3u5l8"]
default_font = ExtResource("1_qaysh")
default_font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58x3v"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 399.0
offset_bottom = 239.0
script = ExtResource("2_uakbt")
partyStatblock = ExtResource("2_odos0")

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3u5l8")
theme_override_styles/panel = SubResource("StyleBoxFlat_58x3v")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PartyMemberStatblock" parent="PanelContainer/HBoxContainer/Stats" instance=ExtResource("2_odos0")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_58x3v")

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = SubResource("Theme_3u5l8")

[node name="Items" type="Button" parent="PanelContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "Items"
flat = true

[node name="Equipment" type="Button" parent="PanelContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "Equipment"
flat = true

[node name="Caster" type="Button" parent="PanelContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "Caster"
flat = true

[node name="Close" type="Button" parent="PanelContainer/HBoxContainer/Buttons"]
texture_filter = 1
layout_mode = 2
text = "Close"
flat = true

[connection signal="pressed" from="PanelContainer/HBoxContainer/Buttons/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Buttons/Equipment" to="." method="_on_equipment_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Buttons/Caster" to="." method="_on_caster_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Buttons/Close" to="." method="_on_close_pressed"]
